# django_template

./: Makefile  README.md  cookiecutter.json  manage.py  pyproject.toml  setup.cfg
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  Dockerfile  Makefile  Procfile  README.md  asgi.py  manage.py  pyproject.toml  setup.cfg
{{cookiecutter.project_name}}/docker/: README.md  docker-compose.srv.yml  docker-compose.vols.yml  docker-compose.yml  docker-entrypoint.sh
{{cookiecutter.project_name}}/server/: uwsgi.ini
{{cookiecutter.project_name}}/settings/: production.py
{{cookiecutter.project_name}}/tests/: conftest.py  pre_test.sh
{{cookiecutter.project_name}}/tests/inbuilts/: test_cors.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: admin.py  application.py  asgi.py  urls.py  wsgi.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/apps/example/: apps.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/apps/tokens/: views.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/apps/users/: auth.py  urls.py  views.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/custom/: apps.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/docs/: openapi.py  settings.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/lib/: admin.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/settings/: development.py  production.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/templates/crispy/: admin_reset.html  change_form.html
(+6 files in other folders)
